--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "ts-node --esm src/index.ts",
     "build": "npx @vercel/ncc build src/index.ts -o dist",
     "start": "node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -18,9 +18,18 @@
     "zod": "^3.25.76"
   },
   "devDependencies": {
+    "@types/jest": "^30.0.0",
     "@types/node": "^24.3.0",
     "@vercel/ncc": "^0.38.3",
+    "jest": "^30.0.5",
+    "ts-jest": "^29.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "testMatch": ["**/test/**/*.test.js"],
+    "verbose": true,
+    "testTimeout": 30000
   }
 }
