--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "prebuild": "tsx scripts/prebuild.ts",
+    "prebuild": "tsx scripts/prebuild.ts && npm run lint:fix",
     "dev": "npm run prebuild && ts-node --esm src/index.ts",
     "build": "npm run prebuild && npx @vercel/ncc build src/index.ts -o dist",
     "start": "node dist/index.js",
-    "test": "jest",
+    "test": "npm run build && jest",
     "prepare": "npm run prebuild",
     "lint": "eslint . && prettier --check .",
     "lint:fix": "eslint . --fix && prettier --write .",
