--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "ai-engineer",
-  "version": "1.0.0",
+  "name": "@dil-ddaradics/ai-engineer",
+  "version": "0.0.5",
+  "description": "A Model Context Protocol (MCP) server for AI engineering tasks with demo workflow management",
   "main": "dist/index.js",
   "type": "module",
-  "bin": {
-    "ai-engineer-demo": "./bin/demo-cli.mjs"
-  },
+  "bin": "./bin/ai-engineer.mjs",
   "files": [
     "dist",
     "bin",
@@ -14,7 +13,7 @@
   "scripts": {
     "prebuild": "tsx scripts/prebuild.ts && npm run lint:fix",
     "dev": "npm run prebuild && ts-node --esm src/index.ts",
-    "build": "npm run prebuild && npx @vercel/ncc build src/index.ts -o dist && npm run build:demo",
+    "build": "npm run prebuild && npx @vercel/ncc build src/index.ts -o dist --no-source-map-register && npm run build:cli",
     "start": "node dist/index.js",
     "test": "npm run build && jest",
     "prepare": "npm run prebuild",
@@ -22,20 +21,36 @@
     "lint:fix": "eslint . --fix && prettier --write .",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "build:demo": "npx tsc -p tsconfig.demo.json",
-    "demo": "node bin/demo-cli.mjs",
-    "demo:list": "npm run demo list",
-    "demo:reset": "npm run demo reset"
+    "build:cli": "npx tsc -p tsconfig.cli.json",
+    "cli": "node bin/cli.mjs",
+    "cli:list": "npm run cli list",
+    "cli:reset": "npm run cli reset"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "mcp",
+    "model-context-protocol",
+    "ai",
+    "ai-engineering",
+    "demo",
+    "workflow",
+    "typescript"
+  ],
+  "author": "dil-ddaradics",
   "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.17.3",
-    "zod": "^3.25.76"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dil-ddaradics/ai-engineer.git"
+  },
+  "homepage": "https://github.com/dil-ddaradics/ai-engineer",
+  "bugs": {
+    "url": "https://github.com/dil-ddaradics/ai-engineer/issues"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
   },
   "devDependencies": {
+    "@modelcontextprotocol/sdk": "^1.17.3",
+    "zod": "^3.25.76",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.3.0",
     "@typescript-eslint/eslint-plugin": "^8.40.0",
