--- a/tsconfig.cli.json
+++ b/tsconfig.cli.json
@@ -5,6 +5,6 @@
     "rootDir": "./src",
     "allowImportingTsExtensions": false
   },
-  "include": ["src/demo/**/*"],
+  "include": ["src/cli/**/*"],
   "exclude": ["**/*.test.ts"]
 }
